--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
   text-align: center;
   font-size: 32px;
   font-family: sans-serif;
-  color: white;
+
 
 }
 #pic1{
@@ -17,8 +17,8 @@
   margin-right: auto;
 }
 .edu{
-  background-color: #63a4ff;
-background-image: linear-gradient(315deg, #63a4ff 0%, #83eaf1 74%);
+  background-image: linear-gradient(to left, #BDBBBE 0%, #9D9EA3 100%), radial-gradient(88% 271%, rgba(255, 255, 255, 0.25) 0%, rgba(254, 254, 254, 0.25) 1%, rgba(0, 0, 0, 0.25) 100%), radial-gradient(50% 100%, rgba(255, 255, 255, 0.30) 0%, rgba(0, 0, 0, 0.30) 100%);
+   background-blend-mode: normal, lighten, soft-light;
 box-shadow: 5px 10px 8px 10px #888888;
 padding: 10px 10px;
 
@@ -30,9 +30,9 @@ padding: 10px 10px;
   text-align: center;
 }
 .fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
+  padding: 10px;
+  font-size: 20px;
+  width: 40px;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
@@ -42,7 +42,7 @@ padding: 10px 10px;
     opacity: 0.7;
 }
 .fa-facebook {
-  background: #3B5998;
+  background: #007bb5;
   color: white;
 
 }
@@ -63,32 +63,46 @@ li a:hover {
 }
 .educ{ text-align: center;
   padding:10px;
-  background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+  background-image: linear-gradient(to top, #0c3483 0%, #a2b6df 100%, #6b8cce 100%, #a2b6df 100%);
   color: black;
   box-shadow: 5px 10px 8px  #888888;
-  border-radius: 20%;
+  border-radius: 10%;
 
 
 }
 .educ:hover{
-background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
+background-image: linear-gradient(45deg, #93a5cf 0%, #e4efe9 100%);
 }
 .proj{
   padding:10px;
   background-image: linear-gradient(to top, #505285 0%, #585e92 12%, #65689f 25%, #7474b0 37%, #7e7ebb 50%, #8389c7 62%, #9795d4 75%, #a2a1dc 87%, #b5aee4 100%);
-  border-radius: 20%;
+  border-radius: 10%;
 }
 .proj:hover{
   background-image: linear-gradient(45deg, #93a5cf 0%, #e4efe9 100%);
 }
 .bullets{
-  background: #ff9999;
-  padding: 20px;
-  list-style-type: none;
+
+
+  list-style-type: square;
 }
 .each{
-  background: #cce5ff;
-  margin: 5px;
-  font-size: 24px;
+
+background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
+
   padding:20px;
 }
+#section1{
+
+    padding:20%;
+    text-align: center;
+    color: white;
+    background-image: linear-gradient(to right, #243949 0%, #517fa4 100%);
+
+     /* margin is -0.5 * dimension */
+
+
+
+}
+.bs-example{
+    	margin: 20px;}
