--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+
 .quote{
   font-family: cursive;
   font-size: 16px;
@@ -94,7 +95,7 @@ background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
 #section1{
 
     padding:20%;
-    padding-top: 13%;
+    padding-top: 15%;
     text-align: center;
     color: white;
     background-image: linear-gradient(to right, #243949 0%, #517fa4 100%);
@@ -121,4 +122,8 @@ background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
   background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
   transform: scale(1.1);
 
+}
+.boxin{
+  background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+  color: white;
 }
